4 March 2015: Wouter
	- Patch from Brad Smith that syncs compat/getentropy_linux with
	  OpenBSD's version (2015-03-04).

3 March 2015: Wouter
	- tag 1.5.3rc1

2 March 2015: Wouter
	- iana portlist update.

20 February 2015: Wouter
	- Use the getrandom syscall introduced in Linux 3.17 (from Heiner
	  Kallweit).
	- Fix #645 Portability to Solaris 10, use AF_LOCAL.
	- Fix #646 Portability to Solaris, -lrt for getentropy_solaris.
	- Fix #647 crash in 1.5.2 because pwd.db no longer accessible after
	  reload.

19 February 2015: Wouter
	- 1.5.2 release tag.
	- svn trunk contains 1.5.3 under development.

13 February 2015: Wouter
	- Fix #643: doc/example.conf.in: unnecessary whitespace.

12 February 2015: Wouter
	- tag 1.5.2rc1

11 February 2015: Wouter
	- iana portlist update.

10 February 2015: Wouter
	- Fix scrubber with harden-glue turned off to reject NS (and other
	  not-address) records.

9 February 2015: Wouter
	- Fix validation failure in case upstream forwarder (ISC BIND) does
	  not have the same trust anchors and decides to insert unsigned NS
	  record in authority section.

2 February 2015: Wouter
	- infra-cache-min-rtt patch from Florian Riehm, for expected long
	  uplink roundtrip times.

30 January 2015: Wouter
	- Fix 0x20 capsforid fallback to omit gratuitous NS and additional
	  section changes.
	- Portability fix for Solaris ('sun' is not usable for a variable).

29 January 2015: Wouter
	- Fix pyunbound byte string representation for python3.

26 January 2015: Wouter
	- Fix unintended use of gcc extension for incomplete enum types,
	  compile with pedantic c99 compliance (from Daniel Dickman).

23 January 2015: Wouter
	- windows port fixes, no AF_LOCAL, no chown, no chmod(grp).

16 January 2015: Wouter
	- unit test for local unix connection.  Documentation and log_addr
	  does not inspect port for AF_LOCAL.
	- unbound-checkconf -f prints chroot with pidfile path.

13 January 2015: Wouter
	- iana portlist update.

12 January 2015: Wouter