@@ -1,6 +1,10 @@
 4 March 2015: Wouter
 	- Patch from Brad Smith that syncs compat/getentropy_linux with
 	  OpenBSD's version (2015-03-04).
+	- 0x20 fallback improved, better handling of servfail responses,
+	  they do not count as missing comparisons (except if all are failed),
+	  and better handling of inability to find nameservers, no more
+	  nameservers can be found results in fallback acceptance.
 
 3 March 2015: Wouter
 	- tag 1.5.3rc1
